--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/buttons.css">
-    <link rel="stylesheet" href="../css/content.css">
-    <link rel="stylesheet" href="../css/form.css">
-    <link rel="stylesheet" href="../css/auth.css">
-    <link rel="stylesheet" href="../css/results.css">
-    <link rel="stylesheet" href="../css/documents.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/layout.css">
+    <link rel="stylesheet" href="../static/css/buttons.css">
+    <link rel="stylesheet" href="../static/css/content.css">
+    <link rel="stylesheet" href="../static/css/form.css">
+    <link rel="stylesheet" href="../static/css/auth.css">
+    <link rel="stylesheet" href="../static/css/results.css">
+    <link rel="stylesheet" href="../static/css/documents.css">
 </head>
 
 <body>
@@ -23,18 +23,24 @@
         <div class="content-wrapper">
             <!--Header-->
             <header class="header">
-                <a href="index.html" class="logo">Legal<span>Today</span></a>
+                <a href="http://localhost:5000/" class="logo">Legal<span>Today</span></a>
+                {% if login_status==0 %}
                 <div class="header-buttons">
                     <button id="login-but" class="button-l">Login</button>
                     <button id="register-but" class="button-r">Registration</button>
                 </div>
+                {% else %}
+                <div class="header-buttons">
+                    <h1>{{ name }}</h1>
+                </div>
+                {% endif %}
             </header>
             <!---Content-->
             <main class="main-content">
                 <section class="r-section">
                     <div class="r-header">
-                        <h2>Search Results for "<span id="search-query-display">...</span>"</h2>
-                        <a href="index.html" class="link">&larr; New Search</a>
+                        <h2>Search Results for "<span id="search-query-display">{{ query }}</span>"</h2>
+                        <a href="http://localhost:5000/" class="link">&larr; New Search</a>
                     </div>
                     <div id="l-results" class="l-container">
                         <div class="spinner"></div>
@@ -64,7 +70,10 @@
             </form>
         </div>
     </div>
-<script src="../js/main.js"></script>
+    <script>
+  window.results = {{ cases | tojson }};
+</script>
+<script src="../static/js/main.js"></script>
 
 </body>
 
