--- a/templates/Doc_view_page.html
+++ b/templates/Doc_view_page.html
@@ -68,10 +68,10 @@
                 <h3 id="mod-title" class="text-2xl font-bold">Login</h3>
                 <button id="close-modal-btn" class="close-modal-btn">&times;</button>
             </div>
-            <form id="auth-form">
-                <div class="space-y-4">
-                    <input type="email" placeholder="Email Address" class="form-input" required>
-                    <input type="password" placeholder="Password" class="form-input" required>
+            <form id="auth-form" method="POST">
+                <div class="space-y-4" id="login-form-div">
+                    <input type="email" placeholder="Email Address" class="form-input" name="email" id="login-email" required>
+                    <input type="password" placeholder="Password" class="form-input" name="password" id = "login-pwd" required>
                 </div>
                 <button type="submit" id="mod-action-btn" class="button-primary full-width-btn">Login</button>
                 <p id="mod-switch-text" class="mod-switch-text"> Create An Account Today:
