--- a/templates/Doc_view_page.html
+++ b/templates/Doc_view_page.html
@@ -43,18 +43,18 @@
                         <div class="d-toolbar">
                              <a href="javascript:history.back()" class="link">&larr; Back to Results</a>
                         </div>
-                        <div id="l-document" class="l-container"><div class="spinner"></div></div>
-                        <article id="d-content" class="d-content hidden">
+                        <!-- <div id="l-document" class="l-container"><div class="spinner"></div></div> -->
+                        <article id="d-content" class="d-content">
                             <header class="d-header">
-                                <h1 id="doc-title"></h1>
-                                <p id="doc-citation" class="citation"></p>
+                                <h1 id="doc-title">{{ case.case_title if case else 'Document not found' }}</h1>
+                                <p id="doc-citation" class="citation">{{ case.citation if case else '' }}</p>
                                 <div class="metadata">
-                                    <div><strong>Judges:</strong> <span id="doc-judges"></span></div>
-                                    <div><strong>Date:</strong> <span id="doc-date"></span></div>
+                                    <div><strong>Judges:</strong> <span id="doc-judges">{{ ', '.join(case.judges) if case else '' }}</span></div>
+                                    <div><strong>Date:</strong> <span id="doc-date">{{ case.judgement_date if case else ''}}</span></div>
                                 </div>
                             </header>
                             <div id="doc-full-text" class="d-body">
-                                <!-- Yaha pe aayenge docs -->
+                                {{ case.full_text|safe if case else '<p>No Info Available</p>' }}
                             </div>
                         </article>
                 </section>
