--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -44,7 +44,7 @@
             <!---Content-->
             <main class="main-content">
                 <section class="r-section">
-                    <form id="search-form" class="search-form" action="{{ url_for('search_query') }}" method="GET">
+                    <form id="search-form" class="search-form" action="{{ url_for('search_query',page_num=1) }}" method="GET">
                         <div class="search-input">
                             <input type="text" id="search-input" name="query" autocomplete="off"
                                 placeholder="Search using case titles, citations, keywords..." required>
@@ -63,6 +63,25 @@
                     <div class="r-header" style="margin-top: 5%;">
                         <h2>Search Results for "<span id="search-query-display">{{ query }}</span>"</h2>
                     </div>
+                    <div class="pagination">
+                        <ul class="pagination-list">
+                            {% if page_nums[0] > 1 %}
+                            <li><a href="{{ url_for('search_query', page_num=page_nums[0]-1, query=query) }}">&laquo; Prev</a></li>
+                            {% endif %}
+
+                            {% for p in range(1, page_nums[1] + 1) %}
+                                {% if p == page_nums[0] %}
+                                    <li class="active"><span>{{ p }}</span></li>
+                                {% else %}
+                                    <li><a href="{{ url_for('search_query', page_num=p, query=query) }}">{{ p }}</a></li>
+                                {% endif %}
+                            {% endfor %}
+
+                            {% if page_nums[0] < page_nums[1] %}
+                            <li><a href="{{ url_for('search_query', page_num=page_nums[0]+1, query=query) }}">Next &raquo;</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
                     <div id="results-list" class="results-list">
                         {% if cases|length == 0 %}
                         <p>No results found</p>
@@ -72,8 +91,9 @@
                             <a href="{{ url_for('doc_view', id=case.id) }}">
                                 <h3>{{ case.title }}</h3>
                                 <p class="citation">{{ case.case_id }} • {{ case.citation }} • {{ case.judgment_date }}</p>
-                                <p class="snippet">{{ case.snippet }}</p>
                             </a>
+                            <button class="show-hide-btn" onclick="toggleSnippet(this)">Show Summary</button>
+                                <p class="snippet hidden">{{ case.snippet }}</p>
                         </div>
                         {% endfor %}
                         {% endif %}
@@ -103,6 +123,25 @@
             </form>
         </div>
     </div>
+    <div class="pagination">
+    <ul class="pagination-list">
+        {% if page_nums[0] > 1 %}
+        <li><a href="{{ url_for('search_query', page_num=page_nums[0]-1, query=query) }}">&laquo; Prev</a></li>
+        {% endif %}
+
+        {% for p in range(1, page_nums[1] + 1) %}
+            {% if p == page_nums[0] %}
+                <li class="active"><span>{{ p }}</span></li>
+            {% else %}
+                <li><a href="{{ url_for('search_query', page_num=p, query=query) }}">{{ p }}</a></li>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_nums[0] < page_nums[1] %}
+        <li><a href="{{ url_for('search_query', page_num=page_nums[0]+1, query=query) }}">Next &raquo;</a></li>
+        {% endif %}
+    </ul>
+</div>
 <script src="../static/js/main.js"></script>
 </body>
 </html>
